<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@null"
        app:titleTextColor="?attr/colorOnPrimary"
        app:navigationIconTint="?attr/colorOnPrimary"
        app:subtitleTextColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/ThemeOverlay.DeadlineTrackApp.Toolbar"
        app:iconTint="?attr/colorOnPrimary">

        <ImageView
            android:id="@+id/ivToolbarLogo"
            android:adjustViewBounds="true"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            app:tint="?attr/colorOnPrimary"
            android:tintMode="src_in" />

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swRequirePin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/require_pin_on_start"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/swDarkTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/dark_theme"
        app:layout_constraintTop_toBottomOf="@id/swRequirePin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnLangRu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/lang_ru"
        app:layout_constraintTop_toBottomOf="@id/swDarkTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnLangEn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lang_en"
        app:layout_constraintTop_toBottomOf="@id/btnLangRu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
